# swimCenas

BoW/: CMakeCache.txt  CMakeLists.txt  Makefile  bagofwords.cpp  bagofwordsANN.cpp  bagofwordsKNN.cpp  bagofwordsSVM.cpp  bow  cmake_install.cmake  dictionary2Class_10.yml  dictionary2Class_100.yml  dictionary2Class_1000.yml  dictionary2Class_300.yml  dictionary2Class_500.yml  dictionary2Class_700.yml  dictionaryLowRes_100.yml  dictionaryLowRes_50.yml  dictionaryMass100.yml  dictionaryRootSIFT_10.yml  dictionaryRootSIFT_100.yml  dictionaryRootSIFT_1000.yml  dictionaryRootSIFT_300.yml  dictionaryRootSIFT_500.yml  dictionaryRootSIFT_700.yml  dictionaryYUV_10.yml  dictionaryYUV_100.yml  eletro.txt  eletro2.txt  eletro3.txt  eletro4.txt  maskKeypoints.yml  param_config.xml  saliencyTest.cpp
BoW/ancora_ymls/: grayKeypoints1.yml  grayKeypoints10.yml  grayKeypoints100.yml  grayKeypoints101.yml  grayKeypoints102.yml  grayKeypoints103.yml  grayKeypoints104.yml  grayKeypoints105.yml  grayKeypoints106.yml  grayKeypoints107.yml  grayKeypoints108.yml  grayKeypoints109.yml  grayKeypoints11.yml  grayKeypoints110.yml  grayKeypoints111.yml  grayKeypoints112.yml  grayKeypoints113.yml  grayKeypoints114.yml  grayKeypoints115.yml  grayKeypoints116.yml  grayKeypoints117.yml  grayKeypoints118.yml  grayKeypoints119.yml  grayKeypoints12.yml  grayKeypoints120.yml  grayKeypoints121.yml  grayKeypoints122.yml  grayKeypoints123.yml  grayKeypoints124.yml  grayKeypoints125.yml  grayKeypoints126.yml  grayKeypoints127.yml  grayKeypoints128.yml  grayKeypoints129.yml  grayKeypoints13.yml  grayKeypoints130.yml  grayKeypoints131.yml  grayKeypoints132.yml  grayKeypoints133.yml  grayKeypoints134.yml  (+566 more)
includes/: customs.h  evaluation.h  segTest.cpp
segmentationTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  seg  segTest.cpp
slidingWindow/: CMakeCache.txt  Makefile  cmake_install.cmake  seg  (+1 more)
